Bug 500202 - Unused variable build warnings; r=MarcoZ